// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupReportPage test renders category pie chart (snapshot) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "flex": 1,
        "padding": 20,
      },
    ]
  }
  testID="themed-view"
>
  <View
    style={
      {
        "height": 30,
        "width": "100%",
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "marginBottom": 12,
        "opacity": 1,
      }
    }
    testID="Back button"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0a7ea4",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e3f2fd",
          "borderRadius": 8,
          "flexDirection": "row",
          "padding": 2,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0a7ea4",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-categories"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#fff",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                {
                  "color": "#fff",
                },
              ],
            ]
          }
        >
          Categories
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-members"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#0a7ea4",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                false,
              ],
            ]
          }
        >
          Members
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 20,
        "width": "100%",
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
        "paddingBottom": 40,
      }
    }
  >
    <View>
      <View>
        <Text>
          Simulated Pie Chart
        </Text>
        <Text>
          100.0%
        </Text>
        <Text
          onPress={[Function]}
        >
          Food
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": 24,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderBottomColor": "#eee",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "marginHorizontal": 4,
              "paddingVertical": 8,
            }
          }
          testID="legend-entry-Food"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFB300",
                  "fontSize": 24,
                },
                {
                  "marginRight": 8,
                },
                {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "flex": 1,
                  "fontSize": 15,
                },
              ]
            }
          >
            Food
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#FFB300",
                  "fontSize": 15,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            $
            30.00
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "height": 20,
            "width": "100%",
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`GroupReportPage test renders empty state (snapshot) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "flex": 1,
        "padding": 20,
      },
    ]
  }
  testID="themed-view"
>
  <View
    style={
      {
        "height": 30,
        "width": "100%",
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "marginBottom": 12,
        "opacity": 1,
      }
    }
    testID="Back button"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0a7ea4",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e3f2fd",
          "borderRadius": 8,
          "flexDirection": "row",
          "padding": 2,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0a7ea4",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-categories"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#fff",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                {
                  "color": "#fff",
                },
              ],
            ]
          }
        >
          Categories
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-members"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#0a7ea4",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                false,
              ],
            ]
          }
        >
          Members
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 20,
        "width": "100%",
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
        "paddingBottom": 40,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        No expenses to show.
      </Text>
      <View
        style={
          {
            "height": 20,
            "width": "100%",
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`GroupReportPage test renders fallback profile for failed member fetch (snapshot) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "flex": 1,
        "padding": 20,
      },
    ]
  }
  testID="themed-view"
>
  <View
    style={
      {
        "height": 30,
        "width": "100%",
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "marginBottom": 12,
        "opacity": 1,
      }
    }
    testID="Back button"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0a7ea4",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e3f2fd",
          "borderRadius": 8,
          "flexDirection": "row",
          "padding": 2,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-categories"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#0a7ea4",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                false,
              ],
            ]
          }
        >
          Categories
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0a7ea4",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-members"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#fff",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                {
                  "color": "#fff",
                },
              ],
            ]
          }
        >
          Members
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 20,
        "width": "100%",
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
        "paddingBottom": 40,
      }
    }
  >
    <View>
      <View>
        <Text>
          Simulated Pie Chart
        </Text>
        <Text>
          33.3%
        </Text>
        <Text
          onPress={[Function]}
        >
          Food
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": 24,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderBottomColor": "#eee",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "marginHorizontal": 4,
              "paddingVertical": 8,
            }
          }
          testID="legend-entry-Alice"
        >
          <ViewManagerAdapter_ExpoImage
            backgroundColor={4294967295}
            borderRadius={16}
            containerViewRef={"[React.ref]"}
            contentFit="cover"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={32}
            marginRight={8}
            nativeViewRef={"[React.ref]"}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={[]}
            source={
              [
                {
                  "uri": "alice.png",
                },
              ]
            }
            style={
              {
                "backgroundColor": "#fff",
                "borderRadius": 16,
                "height": 32,
                "marginRight": 8,
                "width": 32,
              }
            }
            transition={null}
            width={32}
          />
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "flex": 1,
                  "fontSize": 15,
                },
              ]
            }
          >
            Alice
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#1976D2",
                  "fontSize": 15,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            $
            10.00
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "borderBottomColor": "#eee",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "marginHorizontal": 4,
              "paddingVertical": 8,
            }
          }
          testID="legend-entry-(unknown)"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FF7043",
                  "fontSize": 32,
                },
                {
                  "marginRight": 8,
                },
                {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "flex": 1,
                  "fontSize": 15,
                },
              ]
            }
          >
            (unknown)
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#FF7043",
                  "fontSize": 15,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            $
            20.00
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "height": 20,
            "width": "100%",
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`GroupReportPage test renders loading state correctly (snapshot) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "flex": 1,
        "padding": 20,
      },
    ]
  }
  testID="themed-view"
>
  <View
    style={
      {
        "height": 30,
        "width": "100%",
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "marginBottom": 12,
        "opacity": 1,
      }
    }
    testID="Back button"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0a7ea4",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e3f2fd",
          "borderRadius": 8,
          "flexDirection": "row",
          "padding": 2,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0a7ea4",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-categories"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#fff",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                {
                  "color": "#fff",
                },
              ],
            ]
          }
        >
          Categories
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-members"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#0a7ea4",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                false,
              ],
            ]
          }
        >
          Members
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 20,
        "width": "100%",
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
        "paddingBottom": 40,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        Loading...
      </Text>
      <View
        style={
          {
            "height": 20,
            "width": "100%",
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`GroupReportPage test renders member pie chart after toggling mode (snapshot) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "flex": 1,
        "padding": 20,
      },
    ]
  }
  testID="themed-view"
>
  <View
    style={
      {
        "height": 30,
        "width": "100%",
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "marginBottom": 12,
        "opacity": 1,
      }
    }
    testID="Back button"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0a7ea4",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e3f2fd",
          "borderRadius": 8,
          "flexDirection": "row",
          "padding": 2,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-categories"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#0a7ea4",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                false,
              ],
            ]
          }
        >
          Categories
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0a7ea4",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginHorizontal": 2,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          }
        }
        testID="toggle-btn-members"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#fff",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "color": "#0a7ea4",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 6,
                },
                {
                  "color": "#fff",
                },
              ],
            ]
          }
        >
          Members
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 20,
        "width": "100%",
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
        "paddingBottom": 40,
      }
    }
  >
    <View>
      <View>
        <Text>
          Simulated Pie Chart
        </Text>
        <Text>
          37.5%
        </Text>
        <Text
          onPress={[Function]}
        >
          Food
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": 24,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderBottomColor": "#eee",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "marginHorizontal": 4,
              "paddingVertical": 8,
            }
          }
          testID="legend-entry-Alice"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#1976D2",
                  "fontSize": 32,
                },
                {
                  "marginRight": 8,
                },
                {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "flex": 1,
                  "fontSize": 15,
                },
              ]
            }
          >
            Alice
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#1976D2",
                  "fontSize": 15,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            $
            15.00
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "borderBottomColor": "#eee",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "marginHorizontal": 4,
              "paddingVertical": 8,
            }
          }
          testID="legend-entry-Bob"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FF7043",
                  "fontSize": 32,
                },
                {
                  "marginRight": 8,
                },
                {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "flex": 1,
                  "fontSize": 15,
                },
              ]
            }
          >
            Bob
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#FF7043",
                  "fontSize": 15,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            $
            25.00
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "height": 20,
            "width": "100%",
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
